# rpg_svo_pro_open

./: .clang-format  .gitignore
rpg_common/: CMakeLists.txt
rpg_common/src/: fs.cpp
svo/: CMakeLists.txt  package.xml
svo/include/svo/: G2oTypes.h  abstract_bundle_adjustment.h  frame_handler_array.h  frame_handler_base.h  frame_handler_mono.h  frame_handler_stereo.h  g2o_ba.h  global.h  imu_handler.h  initialization.h  io.h  map.h  pose_optimizer.h  reprojector.h  stereo_triangulation.h
svo/src/: G2oTypes.cc  frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  g2o_ba.cpp  imu_handler.cpp  initialization.cpp  io.cpp  map.cpp  pose_optimizer.cpp  reprojector.cpp  stereo_triangulation.cpp
svo/test/: test_frame.cpp
svo_ceres_backend/: CMakeLists.txt  package.xml
svo_ceres_backend/src/: ceres_backend_interface.cpp  ceres_backend_publisher.cpp  error_interface.cpp  estimator.cpp  homogeneous_point_error.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  imu_error.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  map_alignment.cpp  marginalization_error.cpp  motion_detector.cpp  outlier_rejection.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp  speed_and_bias_error.cpp  speed_and_bias_parameter_block.cpp
svo_ceres_backend/test/: test_backend_id.cpp  test_estimator.cpp  test_homogeneous_point_error.cpp  test_imu_error.cpp  test_map.cpp  test_marginalization.cpp  test_pose_error.cpp  test_pose_local_parameterization.cpp  test_relative_pose_error.cpp  test_reprojection_error.cpp  (+1 more)
svo_direct/: CMakeLists.txt  package.xml
svo_online_loopclosing/: CMakeLists.txt
svo_pgo/: CMakeLists.txt
svo_ros/: CMakeLists.txt
调测记录/: 调测记录.md
(+279 files in other folders)
